Bug 116182 - Hebrew character and number make Writer crash
Summary: Hebrew character and number make Writer crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2018-03-04 14:21 UTC by Mark Hung
Modified: 2018-04-26 13:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (10.68 KB, text/plain)
2018-03-11 20:30 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2018-03-04 14:21:17 UTC
Description:
Hebrew character and number make Writer crash. I found this issue when trying to reproduce tdf#97622 - but this may related to my locale, where the document default language is traditional-Chinese.



Steps to Reproduce:
1. Create a new document.
2. Pasting א as pure text.
3. Enter 2.
4. Move cursor around, by mouse clicking or keyboard.

Actual Results:  
Crash.

Expected Results:
Cursor moving.


Reproducible: Always


User Profile Reset: No



Additional Info:
版本:6.0.0.3 (x64)
組建 ID:64a0f66915f38c6217de274f0aa8e15618924765
CPU 執行緒:8; OS:Windows 10.0; UI 算繪:預設; 
語言地區:zh-TW (zh_TW); Calc: group


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.167 Safari/537.36
Comment 1 Julien Nabet 2018-03-04 19:28:52 UTC
On pc Debian x86-64 with master sources updated some days ago with gtk3 or gen rendering I don't reproduce this.
Any chance for a bt?
Comment 2 Xisco Faulí 2018-03-05 23:51:45 UTC
I can't reproduce it in

Versión: 6.0.1.1
Id. de compilación: 60bfb1526849283ce2491346ed2aa51c465abfe6
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: group

Do you reproduce it systematically?
What happen if you try in safe mode ?
Comment 3 Aron Budea 2018-03-06 02:36:57 UTC
Mark, can you please give it a try with 6.0.2.1?
This slightly resembles bug 114736, though that was only triggered with OpenGL rendering (so maybe this is not related at all).
Comment 4 Mark Hung 2018-03-11 06:03:39 UTC
Hi,

Tested with 

Version: 6.1.0.0.alpha0+
Build ID: 5cf0131b85c60ca9618b84ae550bb1765e3295f7
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: zh-TW (en_US.UTF-8); Calc: group

Steps to reproduce:
1. Set locale to traditional Chinese from tools/options/languages.
2. Paste א as pure text.


On Linux the UI stop responding on step 2. Not possible to enter another number via keyboard.

I saw the program always stepped to some code related to CJK justification when I press pause in Visual Studio debug mode, I think it's related to how RTL characters are handled in a document that default to traditional Chinese. That's why added step 1 here, to make my test resembles my test on Windows.
Comment 5 Julien Nabet 2018-03-11 20:30:26 UTC
Created attachment 140568 [details]
bt with debug symbols

With master sources updated today, after having changing locale, I could reproduce this.

I noticed nothing special on console but I gave it a try on gdb and when it hung, I did Ctrl+C to retrieve a bt.
Hope it helps.
Comment 6 Commit Notification 2018-04-07 07:39:23 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a0bcbf72614344639235a46d1cc81483f93a3d61

tdf#116182: correct the index before using CalcSpacing.

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2018-04-26 13:52:29 UTC
@Mark Hung, Thanks for fixing this. Should it be backported to 6.0 ?