tdf#116182: correct the index before using CalcSpacing.

Keep the index of pLastBidiPor when it is set,
then correct the index before invoking pLastBidiPor->CalSpacing,
otherwise we are invoking CalSpacing with SwTextSizeInfo that
has incorrect index.

Change-Id: Ifd6b598ea3c860dcf61fb2c47029ef8c1c912dd1
Reviewed-on: https://gerrit.libreoffice.org/52222
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mark Hung <marklh9@gmail.com>